fixd background image on sync section on tablet layout

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -733,6 +733,11 @@
             width: 340px;
         }
 
+        #slide-section-1-sync {
+            background-position: bottom center;
+            background-size: 100%;
+        }
+
         #title-text {
             margin-left: 0px;
         }
